add absolute path

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         <title>Welcome to my website!</title>
-        <link href="mainstyle.css" rel="stylesheet"/>
-        <script src="jquery-3.5.0.min.js"></script>
+        <link href="/css/mainstyle.css" rel="stylesheet"/>
+        <script src="/js/jquery-3.5.0.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet"> 
     </head>
     <body>
@@ -41,7 +41,7 @@
                 <section class="first">
                     <dl>
                         <dt>
-                            <img src="images/member-default.jpg"/>
+                            <img src="css/images/member-default.jpg"/>
                             <label>
                                 <strong>Andrew Lucia</strong>
                                 3rd Year Cybersecurity Major,
@@ -57,7 +57,7 @@
                 </section>
             </div>
             <div class="page-background two" id="interests">
-                <div class='arrow'><a href="#interests"><img src="images/down-arrow.png"/></a></div>
+                <div class='arrow'><a href="#interests"><img src="css/images/down-arrow.png"/></a></div>
                 <div class="interests">
                     <h1>Interests</h1>
                     <ul>
@@ -77,13 +77,13 @@
             <h1>Contact</h1>
             <div>
                 <ul>
-                    <li class="icon email"><a href="mailto:lucia.an@husky.neu.edu"><img src="images/email-logo.png"/></a></li>
+                    <li class="icon email"><a href="mailto:lucia.an@husky.neu.edu"><img src="css/images/email-logo.png"/></a></li>
                     <li><a href="mailto:lucia.an@husky.neu.edu">lucia.an@husky.neu.edu</a></li>
-                    <li class="icon linkedin"><a href="https://www.linkedin.com/in/andrew-lucia-b2617417a/" target="alt"><img src="images/linkedin.png"/></a></li>
+                    <li class="icon linkedin"><a href="https://www.linkedin.com/in/andrew-lucia-b2617417a/" target="alt"><img src="css/images/linkedin.png"/></a></li>
                     <li><a href="https://www.linkedin.com/in/andrew-lucia-b2617417a/" target="alt">LinkedIn</a></li>
-                    <li class="icon github"><a href="https://github.com/AndrewLucia/Northeastern-Projects" target="alt"><img src="images/github.png"/></a></li>
+                    <li class="icon github"><a href="https://github.com/AndrewLucia/Northeastern-Projects" target="alt"><img src="css/images/github.png"/></a></li>
                     <li><a href="https://github.com/AndrewLucia/Northeastern-Projects" target="alt">Github</a></li>
-                    <li class="icon phone"><img src="images/phone.png"/></li>
+                    <li class="icon phone"><img src="css/images/phone.png"/></li>
                     <li>978-886-1728</li>
                 </ul>
             </div>
