--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Welcome to my website!</title>
         <link href="css/mainstyle.css" rel="stylesheet"/>
-        <script src="/js/jquery-3.5.0.min.js"></script>
+        <script src="js/jquery-3.5.0.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet"> 
     </head>
     <body>
