removing site page

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <title>Welcome to my website!</title>
         <link href="css/mainstyle.css" rel="stylesheet"/>
         <script src="js/jquery-3.5.0.min.js"></script>
+        <script src="js/script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet"> 
     </head>
     <body>
